--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: beige;
+    background-color: white;
 }
 
 h1{
@@ -13,4 +13,8 @@ h1{
 
 .sexy_font{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.hidden{
+    display: none;
 }
