--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,80 @@
-body{
-    background-color: white;
-}
-
-h1{
-    color : blue;
-    transition:color .5s ease-in-out;
-}
-
-.clicked {
-    color :tomato;
-}
-
-.sexy_font{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
 .hidden{
     display: none;
+}
+
+#login-form{
+    position: absolute;
+    width: 473px;
+    height: 30px;
+    left: 488px;
+    top: 547px;
+
+    text-align: center;
+    font-size: 28px;
+    color: #FFFFFF;
+    opacity: 70%;
+}
+
+#clock{
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%,-50%);    /* 여백을 사용하는 대신 요소를 중앙에 배치하는 깔끔한 방법입니다. */
+/*     -50%기본적 변환 수단은, 간단한 즉, "왼쪽 및 위쪽 축을 따라 계산 된 사이즈의 50 %,이 요소를 이동". -50%x축을 따라 "계산된 너비의 절반만큼 왼쪽으로 이동"을 의미하며 y축에서도 마찬가지입니다. 이것이 필요한 이유 top: 50%; left: 50%는 요소를 설정할 때 요소의 왼쪽 상단 모서리를 상위 요소의 중앙으로 이동하기 때문입니다. */    
+    font-size: 190px;
+    text-align: center;
+
+    color: #FFFFFF;
+}
+
+#greeting{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+
+    font-size: 45px;
+    text-align: center;
+    font-weight: bold;
+
+    color: #FFFFFF;
+}
+
+#todo-form{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+
+    font-size: 45px;
+    text-align: center;
+
+    color: #FFFFFF;
+}
+
+#quoto{
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+
+    text-align: center;
+    font-size: 20px;
+
+    color: #FFFFFF;
+    opacity: 70%;
+}
+
+#weather{
+    position: absolute;
+    top: 18%;
+    left: 85%;
+    transform: translate(-50%,-50%);
+
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+
+    color: yellowgreen;
+    opacity: 90%;
 }
