--- a/css/style.css
+++ b/css/style.css
@@ -2,79 +2,142 @@
     display: none;
 }
 
+.background{
+    margin: 0 ;
+
+    display: block; 
+    margin: auto;       /* margin은 바깥영역을 설정하는 것이다. auto는 브라우저가 적절한 여백 크기를 선택 */
+
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.background-cover{
+    margin: 0 ;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(16, 16, 16, 0.5);
+    z-index: 1; /*  z 인덱스는 숫자를 통해서 뒤로 미뤄준다? (예를 들어 z인덱스 1은 z 인덱스 2의 뒤에 있는다.) */
+}
+
+body{
+    margin: 0 ;
+}
+
+input[type=text]{
+    width: 150px;
+    height: 25px;
+    border : 3px solid rgba(218, 218, 218, 1);
+    border-radius: 5px;
+}
+
+input[type=submit]{
+    width: 60px;
+    height: 33 px;
+    border : 3px solid rgba(218, 218, 218, 1);
+    border-radius: 5px;
+}
+
 #login-form{
     position: absolute;
-    width: 473px;
-    height: 30px;
-    left: 488px;
-    top: 547px;
+    top: 22%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 
     text-align: center;
-    font-size: 28px;
-    color: #FFFFFF;
+    font-size: 15px;
+    z-index: 2;
+
+    color: rgba(218, 218, 218);
     opacity: 70%;
+    
 }
 
 #clock{
     position: absolute;
-    top: 20%;
+    top: 0%;
     left: 50%;
     transform: translate(-50%,-50%);    /* 여백을 사용하는 대신 요소를 중앙에 배치하는 깔끔한 방법입니다. */
 /*     -50%기본적 변환 수단은, 간단한 즉, "왼쪽 및 위쪽 축을 따라 계산 된 사이즈의 50 %,이 요소를 이동". -50%x축을 따라 "계산된 너비의 절반만큼 왼쪽으로 이동"을 의미하며 y축에서도 마찬가지입니다. 이것이 필요한 이유 top: 50%; left: 50%는 요소를 설정할 때 요소의 왼쪽 상단 모서리를 상위 요소의 중앙으로 이동하기 때문입니다. */    
-    font-size: 190px;
+    font-size: 90px;
     text-align: center;
+    z-index: 2;
 
-    color: #FFFFFF;
+    color: rgba(218, 218, 218, 1);
 }
 
 #greeting{
     position: absolute;
-    top: 40%;
+    top: 20%;
     left: 50%;
     transform: translate(-50%,-50%);
 
-    font-size: 45px;
+    font-size: 30px;
     text-align: center;
     font-weight: bold;
+    z-index: 2;
 
-    color: #FFFFFF;
+    color: rgba(218, 218, 218, 1);
+    
 }
 
 #todo-form{
     position: absolute;
-    top: 50%;
+    top: 29%;
     left: 50%;
+    
     transform: translate(-50%,-50%);
-
-    font-size: 45px;
+    font-size: 15px;
     text-align: center;
+    z-index: 2;
 
-    color: #FFFFFF;
+    color: rgba(218, 218, 218, 1);
+    opacity: 70%;
+}
+
+#todo-list{
+    position: absolute;
+    top: 59%;
+    left: 50%;
+    
+    transform: translate(-60%,-50%);
+    font-size: 15px;
+    text-align: center;
+    z-index: 2;
+
+    color: rgba(218, 218, 218, 1);
+    opacity: 70%;
 }
 
 #quoto{
+    display : inline-block;
     position: absolute;
-    top: 90%;
+    top: 93%;
     left: 50%;
     transform: translate(-50%,-50%);
 
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
+    z-index: 2;
 
-    color: #FFFFFF;
-    opacity: 70%;
+    color: rgba(218, 218, 218, 0.7);
 }
 
 #weather{
     position: absolute;
-    top: 18%;
-    left: 85%;
+    top: 15%;
+    left: 80%;
     transform: translate(-50%,-50%);
 
     text-align: center;
-    font-size: 40px;
+    font-size: 18px;
     font-weight: bold;
+    z-index: 2;
 
-    color: yellowgreen;
-    opacity: 90%;
+    color: rgba(218, 218, 218, 0.9);
 }
